# sherpa-grpc

./: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  audio.py  pyproject.toml  server.py
pb/: sherpa.proto
pb/sherpa/: __init__.py
sherpa/: audio.py  data.py  pyproject.toml  server.py
sherpa/pb/sherpa/: __init__.py
tests/: server_test.py
